Created table for books

--- a/index.html
+++ b/index.html
@@ -9,7 +9,18 @@
 </head>
 <body>
     <div class="cards-container">
-        
+        <table>
+            <thead>
+                <tr>
+                    <th>Title</th>
+                    <th>Author</th>
+                    <th>Pages</th>
+                    <th>Read</th>
+                    <th>Actions</th>
+                </tr>
+            </thead>
+            <tbody id="books-table-body"></tbody>
+        </table>
     </div>
 </body>
 </html>
