--- a/index.html
+++ b/index.html
@@ -8,6 +8,34 @@
     <script src="index.js" defer></script>
 </head>
 <body>
+    <div class="new-button">
+        <dialog id="book-dialog">
+            <form method="dialog" id="book-form">
+                <h2>Add a New Book</h2>
+                <p>
+                    <label for="title">Title:</label>
+                    <input type="text" id="title" name="title" required>
+                </p>
+                <p>
+                    <label for="author">Author:</label>
+                    <input type="text" id="author" name="author" required>
+                </p>
+                <p>
+                    <label for="pages">Pages:</label>
+                    <input type="number" id="pages" name="pages" required>
+                </p>
+                <p>
+                    <label for="read">
+                        <input type="checkbox" id="read" name="read">
+                        I have read this book
+                    </label>
+                </p>
+                <button type="submit">Submit</button>
+                <button type="button" id="cancel-btn">Cancel</button>
+            </form>
+        </dialog>
+        <button class="new-book">New Book</button>
+    </div>
     <div class="cards-container">
         <table>
             <thead>
